--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.bortexel.bortexel4j</groupId>
+    <groupId>ru.bortexel</groupId>
     <artifactId>Bortexel4J</artifactId>
     <version>1.0.4</version>
     <packaging>jar</packaging>
