Maven Shade relocations

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,16 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                            <relocations>
+                                <relocation>
+                                    <pattern>com.google.code.gson</pattern>
+                                    <shadedPattern>ru.bortexel.bortexel4j.dependencies.gson</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.squareup.okhttp3</pattern>
+                                    <shadedPattern>ru.bortexel.bortexel4j.dependencies.okhttp</shadedPattern>
+                                </relocation>
+                            </relocations>
                         </configuration>
                     </execution>
                 </executions>
