--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.bortexel</groupId>
     <artifactId>Bortexel4J</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.5P</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -57,7 +57,6 @@
                             <artifactSet>
                                 <includes>
                                     <include>com.google.code.gson:gson</include>
-                                    <include>com.squareup.okhttp3:okhttp</include>
                                 </includes>
                             </artifactSet>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
@@ -66,7 +65,7 @@
                                     <artifact>*:*</artifact>
                                     <excludes>
                                         <exclude>module-info.class</exclude>
-                                        <exclude>META-INF/MANIFEST.MF</exclude>
+                                        <exclude>META-INF/*</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
@@ -74,10 +73,6 @@
                                 <relocation>
                                     <pattern>com.google.code.gson</pattern>
                                     <shadedPattern>ru.bortexel.bortexel4j.dependencies.gson</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>com.squareup.okhttp3</pattern>
-                                    <shadedPattern>ru.bortexel.bortexel4j.dependencies.okhttp</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
