--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,3 +23,4 @@ jobs:
       run: mvn deploy
       env:
         GITHUB_TOKEN: ${{ github.token }}
+        BORTEXEL_TOKEN: ${{ secrets.BORTEXEL_TOKEN }}
