--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.bortexel</groupId>
-    <artifactId>Bortexel4J</artifactId>
+    <artifactId>bortexel4j</artifactId>
     <version>1.1.3</version>
     <packaging>jar</packaging>
 
@@ -84,8 +84,8 @@
 
     <distributionManagement>
         <repository>
-            <id>ruscalworld-releases</id>
-            <url>https://maven.ruscalworld.ru</url>
+            <id>github-packages</id>
+            <url>https://maven.pkg.github.com/bortexel/bortexel4j</url>
         </repository>
     </distributionManagement>
 
