--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,6 +19,8 @@ jobs:
       with:
         java-version: 11
         server-id: bortexel-github
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy
       env:
