--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,10 +18,13 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-        server-id: bortexel-github
+        server-id: ruscalworld-releases
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Publish to GitHub Packages Apache Maven
+    - name: Publish to Maven repository
       run: mvn deploy
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
