--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.bortexel</groupId>
     <artifactId>bortexel4j</artifactId>
-    <version>1.3.3-A</version>
+    <version>1.3.4</version>
     <packaging>jar</packaging>
 
     <properties>
