--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.bortexel</groupId>
     <artifactId>bortexel4j</artifactId>
-    <version>1.3.16</version>
+    <version>1.3.16-A</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -57,8 +57,6 @@
                             <artifactSet>
                                 <includes>
                                     <include>com.google.code.gson:gson</include>
-                                    <include>com.squareup.okhttp3:okhttp</include>
-                                    <include>com.squareup.okio:okio</include>
                                 </includes>
                             </artifactSet>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
@@ -75,14 +73,6 @@
                                 <relocation>
                                     <pattern>com.google.code.gson</pattern>
                                     <shadedPattern>ru.bortexel.bortexel4j.dependencies.gson</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>okhttp3</pattern>
-                                    <shadedPattern>ru.bortexel.bortexel4j.dependencies.okhttp3</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>okio</pattern>
-                                    <shadedPattern>ru.bortexel.bortexel4j.dependencies.okio</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
